fixed contact us and aligned text

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
 
 p {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 24px;
+    font-size: 42px;
     width: 80vw;
     color: #3D2902;
 }
@@ -178,14 +178,17 @@ form {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 24px;
     color: #3D2902;
-    margin-inline: 20px;
+    text-align: center;
 }
 
-.shop-text-container {
-    position: absolute;
-    left: 0;
-    top: 250vh;
+.text-container2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
+
 
 @media (max-width: 1350px)
 {
